k8s/overlays/hmg/loja-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-front-ingress
  namespace: loja
spec:
  ingressClassName: nginx
  rules:
    - host: hmg-app.loja.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loja-front
                port:
                  number: 80
